--- a/Czech/main/CalendarProvider.apk/res/values-cs/strings.xml
+++ b/Czech/main/CalendarProvider.apk/res/values-cs/strings.xml
@@ -21,4 +21,5 @@
   <string name="holiday_update_title">Je nutné aktualizovat seznam pracovních dní</string>
   <string name="provider_label">Kalendář</string>
   <string name="upgrade_msg">Probíhá aktualizace databáze kalendáře.</string>
+  <string name="channel_name">Upozornění kalendáře</string>  
 </resources>
