--- a/Czech/main/MiuiGallery.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiGallery.apk/res/values-cs/strings.xml
@@ -1351,5 +1351,8 @@
   <string name="ext_sdcard_permission_request_reason">Galerie vyžaduje povolení k přístupu na SD kartu.</string>
   <string name="ext_sdcard_permission_request_title">Povolit Galerii přístup k SD kartě</string>
   <string name="ext_sdcard_request_failed_button_text">OK</string>
-  <string name="ext_sdcard_request_succeed_toast_text">Hotovo!</string>  
+  <string name="ext_sdcard_request_succeed_toast_text">Hotovo!</string> 
+  <string name="channel_default_name">Nové funkce</string>
+  <string name="channel_low_name">Nové zprávy</string>
+  <string name="channel_min_name">Upozornění</string>  
 </resources>
