--- a/Czech/main/MiuiScreenRecorder.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiScreenRecorder.apk/res/values-cs/strings.xml
@@ -89,4 +89,5 @@
   <string name="first_using_mic_dialog_title">Jsou vyžadována povolení</string>
   <string name="using_record_confirm_cancel">Odmítnout</string>
   <string name="using_record_confirm_ok">Povolit</string>
+  <string name="warning_recording_when_a2dp_connect">Vaše zařízení nepodporuje nahrávání systémových zvuků, když je připojeno Bluetooth handsfree.</string>
 </resources>
