--- a/Czech/device/rosy/Settings.apk/res/values-cs-rCZ/strings.xml
+++ b/Czech/device/rosy/Settings.apk/res/values-cs-rCZ/strings.xml
@@ -7,6 +7,19 @@
   <string name="abc_activity_chooser_view_see_all">Zobrazit vše</string>
   <string name="abc_activitychooserview_choose_application">Vybrat aplikaci</string>
   <string name="abc_capital_off">VYPNUTO</string>
+  <string name="aod_lock_screen_date">EEEE, MMMM d</string>
+  <string name="aod_lock_screen_date_12">EEEE, MMMM d</string>
+  <string name="aod_mode_bg">Pozadí</string>
+  <string name="aod_mode_clock">Hodiny</string>
+  <string name="aod_mode_style">Styl hodin a pozadí</string>
+  <string name="aod_mode_summary">Zobrazit čas, datum a SMS, když je displej vypnutý.</string>
+  <string name="aod_sample_date">Květen 10 Úterý</string>
+  <string name="dark_color_mode">Tmavý režim</string>
+  <string name="dark_color_summary">Použít tmavou barvu pozadí v kompatibilních aplikacích</string>
+  <string name="open_dark_mode_dialog_summary">Vaše nastavení displeje nejsou kompatibilní s Tmavým režimem. Nastavení bude obnoveno po deaktivaci Tmavého režimu. Chcete jej deaktivovat nyní?</string>
+  <string name="open_dark_mode_dialog_title">Kompatibilita Tmavého režimu</string>
+  <string name="screen_cancel">Zrušiť</string>
+  <string name="screen_confirm">Povoliť</string>
   <string name="abc_capital_on">ZAPNUTO</string>
   <string name="abc_search_hint">Vyhledat…</string>
   <string name="abc_searchview_description_clear">Smazat dotaz</string>
