--- a/Czech/main/FileExplorer.apk/res/values-cs/strings.xml
+++ b/Czech/main/FileExplorer.apk/res/values-cs/strings.xml
@@ -8,6 +8,7 @@
   <string name="add_task">Přidat úlohu</string>
   <string name="adding_upload_tasks">Přidávání souborů pro nahrání.</string>
   <string name="already_liked">Již je v oblíbených</string>
+  <string name="menu_set_wallpaper">Nastavit jako tapetu</string>
   <string name="already_signin_description">Podepsat se můžete pouze jednou za den, zkuste to opět zítra.</string>
   <string name="app_name">Soubory</string>
   <string name="app_name_bluetooth">Bluetooth</string>
