--- a/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
@@ -1990,4 +1990,5 @@ Jakýkoli uživatel může aktualizovat aplikace všech ostatních uživatelů."
   <string name="aspect_title">Režim celé obrazovky</string>
   <string name="accessibility_aspect_button">Režim celé obrazovky</string>
   <string name="gxzw_long_press_tip"/>
+  <string name="face_unlock_not_roi">Udržte tvář v rámečku</string>
 </resources>
