--- a/Czech/main/ThemeManager.apk/res/values-cs/strings.xml
+++ b/Czech/main/ThemeManager.apk/res/values-cs/strings.xml
@@ -473,4 +473,10 @@ ale obsah, který hledáte, není dostupný ve Vaší zemi."</string>
   <string name="theme_detail_tab_comment">Komentáře</string>
   <string name="theme_detail_tab_recommend">Doporučené</string>
   <string name="theme_detail_tab_theme">Témata</string> 
+   <string name="using_theme_show_ad">Doporučení</string>
+  <string name="pref_privacy_policy">Ochrana soukromí</string>
+  <string name="using_theme_next_automatic_update">Automatické aktualizace</string>
+  <string name="using_theme_next_automatic_update_summary">Aktualizovat stažená témata automaticky přes Wi-Fi</string>
+  <string name="title_my_miwallpaper_resource">Mé živé pozadí</string>
+  <string name="title_my_miwallpaper_video_file_resource">Mé videopozadí</string>  
 </resources>
