--- a/Czech/main/MiuiGallery.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiGallery.apk/res/values-cs/strings.xml
@@ -1355,4 +1355,9 @@
   <string name="channel_default_name">Nové funkce</string>
   <string name="channel_low_name">Nové zprávy</string>
   <string name="channel_min_name">Upozornění</string>  
+  <string name="month_view_tip_button_text">Rozumím</string>
+  <string name="month_view_tip_sub_title">Prsty k sobě přepnete na zobrazení měsíce</string>
+  <string name="month_view_tip_title">Zobrazení měsíce</string>
+  <string name="text_tab_bubble">Bubliny</string>
+  <string name="text_tab_watermark">Vodoznak</string>  
 </resources>
