--- a/Czech/main/Weather.apk/res/values-cs/strings.xml
+++ b/Czech/main/Weather.apk/res/values-cs/strings.xml
@@ -206,4 +206,5 @@ Zadejte město manuálně"</string>
   <string name="weather_alert_channel_name">Upozornění</string>
   <string name="weather_service_channel_name">Služby na pozadí</string>
   <string name="settings">Nastavení</string>
+    <string name="no_data">Žádná data</string>
 </resources>
