--- a/Czech/main/CloudService.apk/res/values-cs/strings.xml
+++ b/Czech/main/CloudService.apk/res/values-cs/strings.xml
@@ -614,82 +614,82 @@ Odeslané ID vašeho zařízení na server Mi bude zašifrováno."</string>
   <string name="hybrid_service_unavailiable">Služba není dostupná</string>
   <string name="hybrid_try_again">Zkusit znovu</string>  
   <string name="close_shortcut">Zavřít</string>
-  <string name="last_sync_time_just_now">Teraz</string>
+  <string name="last_sync_time_just_now">Nyní</string>
   <string name="last_sync_time_yesterday">Včera</string>
-  <string name="member_entrance_normal_title">Zmeniť úložisko MiCloud</string>
-  <string name="member_entrance_title_free_high_case_a">Získať viac miesta</string>
-  <string name="member_entrance_title_free_high_case_b">Navýšiť MiCloud</string>
-  <string name="member_entrance_title_free_low_case_a">Získať viac miesta</string>
-  <string name="member_entrance_title_free_low_case_b">Navýšiť MiCloud</string>
-  <string name="member_entrance_title_premium_high_case_a">Zmeniť MiCloud</string>
-  <string name="member_entrance_title_premium_high_case_b">Obnoviť</string>
-  <string name="member_entrance_title_premium_low_case_a">Získať viac úložiska</string>
-  <string name="member_entrance_title_premium_low_case_b">Navýšiť MiCloud</string>
-  <string name="member_entrance_title_ultra_high_case_a">Obnoviť</string>
-  <string name="member_entrance_title_ultra_high_case_b">Obnoviť</string>
-  <string name="member_entrance_title_ultra_low_case_a">Obnoviť</string>
-  <string name="member_entrance_title_ultra_low_case_b">Obnoviť</string>
-  <string name="micloud_main_manual_sync">Manuálna synchr.</string>
-  <string name="micloud_main_sync_mode_summary">Niektoré položky sa synchronizujú keď je displej vypnutý a batéria sa nabíja.</string>
-  <string name="micloud_main_sync_mode_title">šetrenie batérie</string>
-  <string name="micloud_manaul_sync_success_button_text">Zobraziť podrobnosti</string>
-  <string name="micloud_manaul_sync_success_title">Synchronizované</string>
-  <string name="micloud_manual_activating">Aktivácia...</string>
-  <string name="micloud_manual_all_sync_off_button_text">Povoliť</string>
-  <string name="micloud_manual_all_sync_off_summary">Obnoviť synchronizované dáta na nových zariadeniach cez MiCloud</string>
-  <string name="micloud_manual_all_sync_off_title">Synchr. s MiCloud je vypnutá</string>
-  <string name="micloud_manual_buy_vip">Navýšiť MiCloud</string>
-  <string name="micloud_manual_cloud_storage_full_button_text">Navýšiť</string>
-  <string name="micloud_manual_cloud_storage_full_summary">Navýšte svoj MiCloud pre synchronizáciu fotografií, kontaktov, atď.</string>
-  <string name="micloud_manual_cloud_storage_full_title">MiCloud úložisko je plné. Synchr. je zastavená.</string>
-  <string name="micloud_manual_cloud_storage_low_button_text">Navýšiť</string>
-  <string name="micloud_manual_cloud_storage_low_summary">Navýšte vaše MiCloud úložisko pre získanie viac priestoru</string>
-  <string name="micloud_manual_cloud_storage_low_title">Dochádza vám MiCloud úložisko.</string>
-  <string name="micloud_manual_grant_permission">Povolenia</string>
-  <string name="micloud_manual_local_storage_low_button_text">Vyčistiť</string>
-  <string name="micloud_manual_local_storage_low_summary">Synchr. nemôže pokračovať. MiCloud úložisko je plné."</string>
-  <string name="micloud_manual_local_storage_low_title">Dochádza vám MiCloud úložisko</string>
-  <string name="micloud_manual_network_disconnet_button_text">Nastavenie siete</string>
-  <string name="micloud_manual_network_disconnet_title">Nebolo možné pripojiť sa k sieti</string>
-  <string name="micloud_manual_paused">Synchr. zastavená</string>
-  <string name="micloud_manual_pausing">Synchr. zastavená</string>
-  <string name="micloud_manual_pending">Čaká sa</string>
-  <string name="micloud_manual_reactivate">Pokračovať</string>
+  <string name="member_entrance_normal_title">Změnit úložiště MiCloud</string>
+  <string name="member_entrance_title_free_high_case_a">Získat více místa</string>
+  <string name="member_entrance_title_free_high_case_b">Navýšit MiCloud</string>
+  <string name="member_entrance_title_free_low_case_a">Získat více místa</string>
+  <string name="member_entrance_title_free_low_case_b">Navýšit MiCloud</string>
+  <string name="member_entrance_title_premium_high_case_a">Změnit MiCloud</string>
+  <string name="member_entrance_title_premium_high_case_b">Obnovit</string>
+  <string name="member_entrance_title_premium_low_case_a">Získat více úložiště</string>
+  <string name="member_entrance_title_premium_low_case_b">Navýšit MiCloud</string>
+  <string name="member_entrance_title_ultra_high_case_a">Obnovit</string>
+  <string name="member_entrance_title_ultra_high_case_b">Obnovit</string>
+  <string name="member_entrance_title_ultra_low_case_a">Obnovit</string>
+  <string name="member_entrance_title_ultra_low_case_b">Obnovit</string>
+  <string name="micloud_main_manual_sync">Manuální synchr.</string>
+  <string name="micloud_main_sync_mode_summary">Některé položky se synchronizují, když je displej vypnutý a baterie se nabíjí.</string>
+  <string name="micloud_main_sync_mode_title">Šetření baterie</string>
+  <string name="micloud_manaul_sync_success_button_text">Zobrazit podrobnosti</string>
+  <string name="micloud_manaul_sync_success_title">Synchronizováno</string>
+  <string name="micloud_manual_activating">Aktivace...</string>
+  <string name="micloud_manual_all_sync_off_button_text">Povolit</string>
+  <string name="micloud_manual_all_sync_off_summary">Obnovit synchronizovaná data na nových zařízeních přes MiCloud</string>
+  <string name="micloud_manual_all_sync_off_title">Synchr. s MiCloud je vypnuta</string>
+  <string name="micloud_manual_buy_vip">Navýšit MiCloud</string>
+  <string name="micloud_manual_cloud_storage_full_button_text">Navýšit</string>
+  <string name="micloud_manual_cloud_storage_full_summary">Navyšte svůj MiCloud pro synchronizaci fotografií, kontaktů, atd.</string>
+  <string name="micloud_manual_cloud_storage_full_title">MiCloud úložiště je plné. Synchr. je zastavena.</string>
+  <string name="micloud_manual_cloud_storage_low_button_text">Navýšit</string>
+  <string name="micloud_manual_cloud_storage_low_summary">Navyšte vaše MiCloud úložiště pro získání více prostoru</string>
+  <string name="micloud_manual_cloud_storage_low_title">Dochází vám MiCloud úložiště.</string>
+  <string name="micloud_manual_grant_permission">Povolení</string>
+  <string name="micloud_manual_local_storage_low_button_text">Vyčistit</string>
+  <string name="micloud_manual_local_storage_low_summary">Synchr. nemůže pokračovat. MiCloud úložiště je plné."</string>
+  <string name="micloud_manual_local_storage_low_title">Dochází vám MiCloud úložiště</string>
+  <string name="micloud_manual_network_disconnet_button_text">Nastavení sítě</string>
+  <string name="micloud_manual_network_disconnet_title">Nebylo možné připojit se k síti</string>
+  <string name="micloud_manual_paused">Synchr. zastavena</string>
+  <string name="micloud_manual_pausing">Synchr. zastavena</string>
+  <string name="micloud_manual_pending">Čeká se</string>
+  <string name="micloud_manual_reactivate">Pokračovat</string>
   <string name="micloud_manual_sync_all">Synchr.</string>
   <string name="micloud_manual_sync_now">Synchr.</string>
-  <string name="micloud_manual_sync_pause">Zastaviť</string>
-  <string name="micloud_manual_sync_resume">Obnoviť synchr.</string>
-  <string name="micloud_manual_syncing">Synchronizácia</string>
-  <string name="micloud_manual_title">Manuálna synchr.</string>
-  <string name="micloud_preference_last_sync_time">Posledná synchr.: %s</string>
+  <string name="micloud_manual_sync_pause">Zastavit</string>
+  <string name="micloud_manual_sync_resume">Obnovit synchr.</string>
+  <string name="micloud_manual_syncing">Synchronizace</string>
+  <string name="micloud_manual_title">Manuální synchr.</string>
+  <string name="micloud_preference_last_sync_time">Poslední synchr.: %s</string>
   <string name="micloud_preference_syncing">Synchr.</string>
-  <string name="micloud_sync_result_already_in_progress">Posledná synchr. prebieha</string>
-  <string name="micloud_sync_result_auth_exception">Chyba prihlásenia</string>
-  <string name="micloud_sync_result_cancel">Synchr. zrušená</string>
-  <string name="micloud_sync_result_cloud_storage_full">MiCloud úložisko je plné</string>
-  <string name="micloud_sync_result_common_message">Nebolo možné synchr. Skúste to znova neskôr.</string>
-  <string name="micloud_sync_result_cta_permission_error">Pripojte sa k sieti</string>
-  <string name="micloud_sync_result_internal_error">Interná chyba</string>
+  <string name="micloud_sync_result_already_in_progress">Poslední synchr. probíhá</string>
+  <string name="micloud_sync_result_auth_exception">Chyba přihlášení</string>
+  <string name="micloud_sync_result_cancel">Synchr. zrušena</string>
+  <string name="micloud_sync_result_cloud_storage_full">MiCloud úložiště je plné</string>
+  <string name="micloud_sync_result_common_message">Nebylo možné synchr. Zkuste to znovu později.</string>
+  <string name="micloud_sync_result_cta_permission_error">Připojte se k síti</string>
+  <string name="micloud_sync_result_internal_error">Interní chyba</string>
   <string name="micloud_sync_result_io_exception">I/O chyba</string>
-  <string name="micloud_sync_result_parse_exception">Chyba čítania dát</string>
-  <string name="micloud_sync_result_permission_error">Chyba povolenia</string>
-  <string name="micloud_sync_result_request_error">Chyba siete</string>
-  <string name="micloud_sync_result_secure_space_limit">Nie je možné synchr. v zabezpečenom profile</string>
-  <string name="micloud_sync_result_sim_activated_error">SIM karta nie je aktivovaná</string>
-  <string name="micloud_sync_result_wifi_only">Synchr. len na Wi-Fi</string>
+  <string name="micloud_sync_result_parse_exception">Chyba čtení dat</string>
+  <string name="micloud_sync_result_permission_error">Chyba povolení</string>
+  <string name="micloud_sync_result_request_error">Chyba sítě</string>
+  <string name="micloud_sync_result_secure_space_limit">Nelze synchr. v zabezpečeném profilu</string>
+  <string name="micloud_sync_result_sim_activated_error">SIM karta není aktivována</string>
+  <string name="micloud_sync_result_wifi_only">Synchr. jen na Wi-Fi</string>
   <string name="sync_detail_summary_off">Vyp</string>
   <string name="sync_detail_text">Podrobnosti synchr.</string>
   <string name="user_storage_info_available_text_prefix">%s dostupné</string>
-  <string name="warning_bar_action_add_short_cut">Pridať</string>
-  <string name="warning_bar_action_close">Zatvoriť</string>
-  <string name="warning_bar_action_turn_on_master_sync">Povoliť</string>
-  <string name="warning_bar_action_turn_on_sync">Povoliť</string>
-  <string name="warning_bar_action_upgrade_vip">NAvýšiť MiCloud</string>
-  <string name="warning_bar_add_short_cut_success">Pridané</string>
-  <string name="warning_bar_title_cloud_space_already_full">Dochádza vám MiCloud úložisko.</string>
-  <string name="warning_bar_title_cloud_space_full">MiCloud úložisko je plné. Synchr. je zastavená.</string>
-  <string name="warning_bar_title_master_sync_off">Automatická synchr. je vypnutá</string>
-  <string name="warning_bar_title_network_unconnected">Nebolo možné pripojiť sa k sieti</string>
-  <string name="warning_bar_title_short_cut">Pridať MiCloud odkaz na plochu?</string>
-  <string name="warning_bar_title_sync_off">Synchr. s MiCloud je vypnutá</string>
+  <string name="warning_bar_action_add_short_cut">Přidat</string>
+  <string name="warning_bar_action_close">Zavřít</string>
+  <string name="warning_bar_action_turn_on_master_sync">Povolit</string>
+  <string name="warning_bar_action_turn_on_sync">Povolit</string>
+  <string name="warning_bar_action_upgrade_vip">Navýšit MiCloud</string>
+  <string name="warning_bar_add_short_cut_success">Přidáno</string>
+  <string name="warning_bar_title_cloud_space_already_full">Dochází vám MiCloud úložiště.</string>
+  <string name="warning_bar_title_cloud_space_full">MiCloud úložiště je plné. Synchr. je zastavena.</string>
+  <string name="warning_bar_title_master_sync_off">Automatická synchr. je vypnuta</string>
+  <string name="warning_bar_title_network_unconnected">Nebylo možné připojit se k síti</string>
+  <string name="warning_bar_title_short_cut">Přidat MiCloud odkaz na plochu?</string>
+  <string name="warning_bar_title_sync_off">Synchr. s MiCloud je vypnuta</string>
 </resources>
