--- a/Czech/main/Notes.apk/res/values-cs/strings.xml
+++ b/Czech/main/Notes.apk/res/values-cs/strings.xml
@@ -277,4 +277,8 @@ http://www.miuios.cz/rom
   <string name="cta_dialog_message">Poznámky vyžadují povolení pro připojení k síti, nahrávání zvuku a přístup ke kontaktům. Chcete povolit?</string>
   <string name="cta_dialog_title">Povolení</string>  
   <string name="unclassfied_folder_name">Není rozděleno</string>
+  <string name="permission_intro_contact">Pro poznámky zapsané během hovoru</string>
+  <string name="permission_intro_microphone">Pro nahrávky</string>
+  <string name="permission_intro_phone">Pro poznámky zapsané během hovoru</string>
+  <string name="permission_intro_storage">Pro ukládání poznámek a příloh</string>  
 </resources>
