--- a/Czech/main/MiuiScreenRecorder.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiScreenRecorder.apk/res/values-cs/strings.xml
@@ -90,4 +90,6 @@
   <string name="using_record_confirm_cancel">Odmítnout</string>
   <string name="using_record_confirm_ok">Povolit</string>
   <string name="warning_recording_when_a2dp_connect">Vaše zařízení nepodporuje nahrávání systémových zvuků, když je připojeno Bluetooth handsfree.</string>
+<string name="permission_intro_microphone">Pro nahrávání zvuku, pokud je zvolen vstup z mikrofonu</string>
+  <string name="permission_intro_storage">Pro ukládání nahrávek</string>  
 </resources>
