--- a/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
+++ b/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
@@ -3055,5 +3055,10 @@ Remaining data includes data that has been rolled over from the previous month."
   <string name="app_permission_use_group_storage_des">Ukládat soubory na úložiště</string>
   <string name="app_permission_use_neccesary">Požadované povolení</string>
   <string name="app_permission_use_no_neccesary">Ostatní povolení</string>
-  <string name="app_permission_use_title">Povolení</string>  
+  <string name="app_permission_use_title">Povolení</string> 
+  <string name="dialog_change_package_type_summary">Změna datového balíčku vymaže vaši aktuální spotřebu dat. Chcete jej změnit?</string>
+  <string name="dialog_change_package_type_title">Změna datového balíčku</string>  
+  <string name="traffic_setting_fragment_packege_type">Nastavení datového balíčku</string>
+  <string name="pref_category_package_type_title">Datový balíček</string>
+  <string name="pref_title_traffic_package_type">Datový balíček</string> 
 </resources>
