--- a/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
+++ b/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
@@ -3061,4 +3061,72 @@ Remaining data includes data that has been rolled over from the previous month."
   <string name="traffic_setting_fragment_packege_type">Nastavení datového balíčku</string>
   <string name="pref_category_package_type_title">Datový balíček</string>
   <string name="pref_title_traffic_package_type">Datový balíček</string> 
+  <string name="alert_back_diving_mode_summary">Deaktivovat režim celé obrazovky?</string>
+  <string name="alert_back_diving_mode_title">Režim celé obrazovky</string>
+  <string name="audio_optimization_summary">Vylepšit zvuk a odfiltrovat okolní šum při hovorech</string>
+  <string name="audio_optimization_title">Vylepšit zvuk</string>
+  <string name="auto_data_back_booster">Zrychlení her je deaktivováno.</string>
+  <string name="auto_data_booster_suc">Zrychlení her je aktivováno. Přepnuto na režim celé obrazovky.</string>
+  <string name="create_gamebooster_destop">Odkaz na ploše vytvořen</string>
+  <string name="doze_optimization_summary">Zvýšit citlivost na doteky</string>
+  <string name="doze_optimization_title">Optimalizovat citlivost displeje</string>
+  <string name="forground_network_optimization_summary">Přidělit více výkonu spuštěné hře</string>
+  <string name="forground_network_optimization_title">Priorita výkonu</string>
+  <string name="function_shield_summary">Omezit automatický jas, gesta a režim čtení</string>
+  <string name="function_shield_summary_m">Zakázat automatický jas a gesta</string>
+  <string name="function_shield_title">Rozšířený dojem</string>
+  <string name="game_else_function">Ostatní</string>
+  <string name="gamebox_browser_not_find">Nainstalujte Mi Prohlížeč</string>
+  <string name="gamebox_dnd">Režim nerušit</string>
+  <string name="gamebox_func_antimsg_close">Plovoucí upozornění jsou povoleny</string>
+  <string name="gamebox_func_antimsg_open">Plovoucí upozornění jsou zakázány</string>
+  <string name="gamebox_func_immersion_close">Režim celé obrazovky je aktivován</string>
+  <string name="gamebox_func_immersion_open">Režim celé obrazovky je povolen</string>
+  <string name="gamebox_func_switch_simcard">Přepnuto na SIM %1$d pro data</string>
+  <string name="gamebox_func_switch_simcard_immersion">Nelze přepnout SIM karty v režimu celé obrazovky</string>
+  <string name="gamebox_func_wlan_close">Wi-Fi je vypnuto</string>
+  <string name="gamebox_func_wlan_open">Wi-Fi je zapnuto</string>
+  <string name="gamebox_hangup">Vypnout displej</string>
+  <string name="gamebox_hangup_tips_content">Tato funkce umožňuje vypnout displej bez ukončení hry. Po odemknutí zařízení se můžete opět vrátit do hry.</string>
+  <string name="gamebox_hangup_tips_title">Vypnout displej</string>
+  <string name="gamebox_immersion">Režim celé obrazovky</string>
+  <string name="gamebox_immersion_tips_content">Režim celé obrazovky omezí všechny SIM karty kromě mobilních dat. Nebudou vás rušit hovory ani SMS zprávy. Všechny funkce se automaticky obnoví po ukončení režimu celé obrazovky. Chcete jej povolit nyní?</string>
+  <string name="gamebox_immersion_tips_title">Upozornění</string>
+  <string name="gamebox_immerson_open">Aktivace režimu celé obrazovky...</string>
+  <string name="gamebox_positive_button_text">OK (%1$ds)</string>
+  <string name="gamebox_recent_task_expand_fail">"Aplikace, které fungují s klávesovými zkratkami, nejsou nainstalovány"</string>
+  <string name="gamebox_simcard">Přepnout SIM karty</string>
+  <string name="gamebox_wifi">Wi-Fi</string>
+  <string name="gb_advance_settings_edge_gear1">Žádné</string>
+  <string name="gb_advance_settings_edge_gear2">Malé</string>
+  <string name="gb_advance_settings_edge_gear3">Střední</string>
+  <string name="gb_advance_settings_edge_gear4">Velké</string>
+  <string name="gb_advance_settings_edge_suppression">Oblast s blokovanými doteky</string>
+  <string name="gb_advance_settings_edge_suppression_summary">Omezit citlivost doteků v blízkosti hran. Držte vaše zařízení zvýrazněnými částmi pro omezení zakrývání reproduktorů.</string>
+  <string name="gb_advance_settings_finger_up">Citlivost pro opakované dotyky</string>
+  <string name="gb_advance_settings_follow_up">Odezva na dotyky</string>
+  <string name="gb_advance_settings_reset">Obnovit výchozí nastavení</string>
+  <string name="gb_advance_settings_reset_dialog_content">Obnovit výchozí nastavení?</string>
+  <string name="gb_advance_settings_reset_dialog_title">Výchozí nastavení</string>
+  <string name="gb_advance_settings_screen_display">Displej</string>
+  <string name="gb_advance_settings_screen_hdr">Vylepšené zobrazení</string>
+  <string name="gb_advance_settings_screen_hdr_gear1">Originál</string>
+  <string name="gb_advance_settings_screen_hdr_gear2">Střední</string>
+  <string name="gb_advance_settings_screen_hdr_gear3">Silné</string>
+  <string name="gb_advance_settings_screen_hdr_gear4">Extrémní</string>
+  <string name="gb_advance_settings_screen_hdr_summary">Zvýšit kontrast a detaily hry</string>
+  <string name="gb_advance_settings_touch">Ovládání doteky</string>
+  <string name="gb_advance_settings_vibration_4d">4D vibrace</string>
+  <string name="gb_advance_settings_vibration_4d_summary">Znázornit akce ve hře vibracemi</string>
+  <string name="gs_advanced_setting_summary">Nastavení pro jednotlivé hry</string>
+  <string name="gs_advanced_setting_title">Další nastavení</string>
+  <string name="noti_back_diving_mode_title">Režim celé obrazovky je povolen. Dotykem jej ukončete.</string>
+  <string name="notify_diving_mode_exception_close">Režim celé obrazovky je ukončen</string>
+  <string name="notify_diving_mode_exception_close_fail">Nastala chyba SIM karty. Nebylo možné deaktivovat režim celé obrazovky.</string>
+  <string name="notify_diving_mode_exception_open_fail">Nastala chyba SIM karty. Nebylo možné aktivovat režim celé obrazovky.</string>
+  <string name="perfermance_optimization_summary">Zamezit problémům s přehříváním</string>
+  <string name="perfermance_optimization_title">Optimalizace výkonu</string>
+  <string name="shield_keyboard_summary">Zakázat tlačítka a gesta během hraní</string>
+  <string name="wlan_optimization_summary">Omezit odezvu Wi-Fi</string>
+  <string name="wlan_optimization_title">Optimalizace Wi-Fi</string>
 </resources>
